# rage-room

./: .gitignore  README.md
claude-code/: CLAUDE.md  README.md  settings.json
claude-code/hooks/: configchange.sh
codex/: README.md
hardening/: .npmrc  README.md  apply.sh  go-env.sh  uv.toml
no-keys/: README.md  pyproject.toml
no-keys/redaction/: __init__.py  certs.py  cli.py  config.py  detector.py  patterns.py  proxy.py  session_manager.py
no-keys/redaction/tests/: test_detector.py  test_proxy.py
sandboxing/: README.md
sandboxing/containers/: .zshrc  Dockerfile  build.sh  devcontainer.json  env.example  post_install.py  run.sh
sandboxing/containers/org-configs/: codex-config.toml
sandboxing/remote/: pyproject.toml
sandboxing/remote/rage_room_remote/: __init__.py  cli.py  config.py
sandboxing/remote/rage_room_remote/templates/: cloud-init.yaml
