[project]
name = "rage-room-remote"
version = "0.1.0"
description = "DigitalOcean sandbox VM manager for Rage Room"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
rage-room-remote = "rage_room_remote.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rage_room_remote*"]

[tool.setuptools.package-data]
rage_room_remote = ["templates/*.yaml"]
